--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "https://git.criticalmass.com/git/vca-reports.git"
+    "url": "https://github.com/Ant-HT/Ant-ABR.git"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
