--- a/package.json
+++ b/package.json
@@ -5,10 +5,20 @@
     "type": "git",
     "url": "https://github.com/Ant-HT/Ant-ABR.git"
   },
+
+  "engines": {
+    "node": ">=0.10.26",
+    "npm": ">=1.4.3"
+  },
+  "engineStrict": true,
+
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-requirejs": "~0.4.3",
     "grunt-contrib-compass": "~0.7.1",
-    "grunt-contrib-watch": "~0.6.0"
+    "grunt-contrib-watch": "~0.6.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-concurrent": "~0.5.0"
   }
 }
